--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,10 @@ h3
 }
 img
 {
-  padding:10px;
+  margin:15px;
 }
-p{
+p
+{
   font-weight:bold;
 
 }
@@ -66,7 +67,7 @@ font-weight:bold;
 {
   background-color:#010a43;
   color:#fff;
-  padding: 7% 15%;
+  padding: 4% 17%;
 }
 .know-heading
 {
